# OZD-registry

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
app/: Dockerfile  main.py
app/api/v1/: activities.py  buildings.py  organizations.py
app/core/: config.py
app/crud/: activity.py  building.py  organization.py
app/db/: session.py
app/models/: activity.py  building.py  organization.py
app/schemas/: activity.py  building.py  organization.py
app/scripts/: demo_data.py
app/services/: geosearch.py  tree.py
